--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <meta property="og:title" content="Jackson Family">
   <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:url" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg">
+  <meta property="og:image" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg">
 
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
