updated Meta Data

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <meta name="description" content="Jackson Family">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="Jackson Family">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg">
-  <meta property="og:image" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg">
+  <meta property="og:image" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg" />
+<meta property="og:image:secure_url" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg" />
+<meta property="og:image:type" content="image/svg" />
+<meta property="og:image:width" content="400" />
+<meta property="og:image:height" content="300" />
+<meta property="og:image:alt" content="Jackson Family Christmas Wreath" />
 
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
