updated meta tag

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Jackson Family">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:image" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg" />
-<meta property="og:image:secure_url" content="https://github.com/garnettr/jackson-family-christmas/blob/main/img/imgsmall/logo-header-large.svg" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/garnettr/jackson-family-christmas/main/img/imgsmall/logo-header-large.svg" />
+<meta property="og:image:secure_url" content="https://raw.githubusercontent.com/garnettr/jackson-family-christmas/main/img/imgsmall/logo-header-large.svg" />
 <meta property="og:image:type" content="image/svg" />
 <meta property="og:image:width" content="400" />
 <meta property="og:image:height" content="300" />
